[workspace]

members = [
    "ch1/ch1-cereals",
    "ch1/ch1-fruit",
    "ch1/ch1-hello2",
    "ch1/ch1-letters",
    "ch1/ch1-penguins",
    "ch1/ch1-race",
    "ch2/ch2-complex",
    "ch2/ch2-mandelbrot",
    "ch3/fileresult",
    "ch3/globalerror",
    "ch5/ch5-cpu1",
    "ch5/ch5-cpu2",
    "ch5/ch5-cpu3",
    "ch5/ch5-cpu4",
    "ch5/ch5-q",
    "ch6/ch6-meminfo-win",
    "ch6/ch6-memscan-1",
    "ch6/ch6-memscan-2",
    "ch6/ch6-memscan-3",
    "ch6/ch6-particles",
    "ch7/ch7-actionkv",
    "ch7/ch7-actionkv1",
    "ch7/ch7-actionkv2",
    "ch7/ch7-fview",
    "ch7/ch7-fview-str",
    "ch7/ch7-pacific-basic",
    "ch7/ch7-pacific-json",
    "ch7/ch7-partitybit",
    "ch7/ch7-serde-eg",
    "ch8/ch8-mac",
    "ch8/ch8-mget",
    "ch8/ch8-resolve",
    "ch8/ch8-rpg",
    "ch8/ch8-simple",
    "ch9/ch9-clock0",
    "ch9/ch9-clock1",
    "ch9/ch9-clock2",
    "ch9/ch9-clock3",
    "ch10/ch10-busythreads",
    "ch10/ch10-busythreads-broken",
    "ch10/ch10-channels-complex",
    "ch10/ch10-channels-intro",
    "ch10/ch10-multijoin",
    "ch10/ch10-render-hex",
    "ch10/ch10-render-hex-functional",
    "ch10/ch10-render-hex-parallel-iterator",
    "ch10/ch10-render-hex-threadpool",
    "ch10/ch10-sharedpause-broken",
    "ch11/ch11-fledgeos-0",
    "ch11/ch11-fledgeos-1",
    "ch11/ch11-fledgeos-2",
    "ch11/ch11-fledgeos-3",
    "ch11/ch11-fledgeos-4",
    "ch12/ch12-basic-handler",
    "ch12/ch12-callstack",
    "ch12/ch12-ignore",
    "ch12/ch12-sixty",
    "ch12/ch12-sjlj",
    "ch12/ch12-toy-global",
]
